delete image path

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -132,97 +132,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - res/drawable/load_fail.png
-    - res/drawable/empty_data.png
-    - res/drawable/img_placeholder.jpg
-    - res/drawable/img_placeholder_circle.png
-    - res/drawable/ic_dmap_bar.png
-    - res/drawable/ic_dmap_location_share.png
-    - res/drawable/ic_dmap_mbassy.png
-    - res/drawable/ic_dmap_police.png
-    - res/drawable/ic_hyperion.png
-    - res/drawable/ic_bank.png
-    - res/drawable/ic_cybercafe.png
-    - res/drawable/ic_food.png
-    - res/drawable/ic_gas_station.png
-    - res/drawable/ic_hotel.png
-    - res/drawable/ic_market.png
-    - res/drawable/ic_park.png
-    - res/drawable/ic_scenic_spotx.png
-    - res/drawable/ic_supermarket.png
-    - res/drawable/ic_wc.png
-    - res/drawable/ic_hospital.png
-    - res/drawable/ic_cafe.png
-    - res/drawable/data.png
-    - res/drawable/global.png
-    - res/drawable/hyperion.png
-    - res/drawable/hyn.png
-    - res/drawable/ic_logo.png
-    - res/drawable/logo_title.png
-    - res/drawable/share_app_en_android.jpeg
-    - res/drawable/share_app_zh_android.jpeg
-    - res/drawable/burn.jpeg
-    - res/drawable/burn_zh.jpeg
-    - res/drawable/encrypted_location.jpeg
-    - res/drawable/encrypted_location_zh.jpeg
-    - res/drawable/location_privacy.jpeg
-    - res/drawable/location_privacy_zh.jpeg
-    - res/drawable/alipay.svg
-    - res/drawable/google_play.svg
-    - res/eth/hyn_abi.json
-    - res/drawable/safe_lock.png
-    - res/drawable/map3_node_introduction.jpeg
-    - res/drawable/map3_node_introduction_en.jpg
-    - res/drawable/discover_first_image.jpeg
-    - res/drawable/eth_logo.png
-    - res/drawable/hyn_logo.png
-    - res/drawable/backup_wallet_main.png
-    - res/drawable/backup_notice_image.png
-    - res/drawable/check_outline.png
-    - res/drawable/hyn_wallet.png
-    - res/drawable/wifi_scan.png
-    - res/drawable/tile_scan.png
-    - res/drawable/magnetic_scan.png
-    - res/drawable/gps_scan.png
-    - res/drawable/bluetooth_scan.png
-    - res/drawable/basestation_scan.png
-    - res/drawable/wifi_status_scan.png
-    - res/drawable/tile_status_scan.png
-    - res/drawable/magnetic_status_scan.png
-    - res/drawable/gps_status_scan.png
-    - res/drawable/bluetooth_status_scan.png
-    - res/drawable/basestation_status_scan.png
-    - res/drawable/radar_scan.png
-    - res/drawable/data_contribution_wallet.png
-    - res/drawable/data_contribution_position.png
-    - res/drawable/data_contribution_signal.png
-    - res/drawable/data_contribution_check.png
-    - res/drawable/data_contribution_wallet_check.png
-    - res/drawable/add_position_add.png
-    - res/drawable/add_position_address.png
-    - res/drawable/add_position_camera.png
-    - res/drawable/add_position_delete.png
-    - res/drawable/add_position_phone.png
-    - res/drawable/add_position_star.png
-    - res/drawable/add_position_time.png
-    - res/drawable/add_position_website.png
-    - res/drawable/add_position_category.png
-    - res/drawable/add_position_detail.png
-    - res/drawable/add_position_name.png
-    - res/drawable/ic_select_category_search_bar.png
-    - res/drawable/ic_select_category_search_bar_clear.png
-    - res/drawable/widget_checkbox_uncheck.png
-    - res/drawable/widget_checkbox_checked.png
-    - res/drawable/ic_business_time_switch_on.png
-    - res/drawable/ic_business_time_switch_off.png
-    - res/drawable/ic_business_time_add_custom.png
-    - res/drawable/ic_user_poi_category_name.png
-    - res/drawable/ic_user_poi_zip_code.png
-    - res/drawable/ic_user_poi_phone_num.png
-    - res/drawable/ic_user_poi_web_site.png
-    - res/drawable/ic_user_poi_business_time.png
-    - res/drawable/ic_confirm_button_right.png
-    - res/drawable/ic_confirm_button_error.png
+
+    - res/drawable/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
