ignore auto generated dir

--- a/.gitignore
+++ b/.gitignore
@@ -69,6 +69,7 @@
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+lib/generated
 android/apk
 android/.project
 android/.settings/org.eclipse.buildship.core.prefs
