share ncp map.  i18n.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ dependencies:
   app_settings: 3.0.0+1
   #https://pub:dev/packages/image_pickers#-readme-tab-
   image_pickers: ^1.0.7+1
+  bordered_text: ^1.0.0
 
 
 dev_dependencies:
