--- a/android/umenglib/src/main/AndroidManifest.xml
+++ b/android/umenglib/src/main/AndroidManifest.xml
@@ -12,5 +12,21 @@
             android:name="org.hyn.titan.umenglib.xiaomi.MipushActivity"
             android:launchMode="singleTask"
             android:exported="true" />
+
+        <!--魅族push应用定义消息receiver声明 -->
+        <receiver android:name="org.hyn.titan.MeizuTestReceiver">
+            <intent-filter>
+                <!-- 接收push消息 -->
+                <action android:name="com.meizu.flyme.push.intent.MESSAGE" />
+                <!-- 接收register消息 -->
+                <action android:name="com.meizu.flyme.push.intent.REGISTER.FEEDBACK" />
+                <!-- 接收unregister消息-->
+                <action android:name="com.meizu.flyme.push.intent.UNREGISTER.FEEDBACK" />
+                <!-- 兼容低版本Flyme3推送服务配置 -->
+                <action android:name="com.meizu.c2dm.intent.REGISTRATION" />
+                <action android:name="com.meizu.c2dm.intent.RECEIVE" />
+                <category android:name="org.hyn.titan"></category>
+            </intent-filter>
+        </receiver>
     </application>
 </manifest>
