--- a/android/umenglib/src/main/AndroidManifest.xml
+++ b/android/umenglib/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="org.maprich.app.umenglib" >
+    package="org.hyn.titan.umenglib" >
     <application
         android:allowBackup="true"
         tools:replace="android:allowBackup"
@@ -9,7 +9,7 @@
             android:name="com.huawei.hms.client.appid"
             android:value="appid=101765295" />
         <activity
-            android:name="org.maprich.app.umenglib.xiaomi.MipushActivity"
+            android:name="org.hyn.titan.umenglib.xiaomi.MipushActivity"
             android:launchMode="singleTask"
             android:exported="true" />
     </application>
