--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,4 +1,4 @@
-include ':app', ':umenglib'
+include ':app', ':umenglib', ':tools'
 
 def flutterProjectRoot = rootProject.projectDir.parentFile.toPath()
 
