--- a/android/umenglib/build.gradle
+++ b/android/umenglib/build.gradle
@@ -35,6 +35,9 @@ dependencies {
 //    androidTestImplementation 'androidx.test.ext:junit:1.1.0'
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    //友盟统计
+    implementation  'com.umeng.umsdk:analytics:8.0.0'
+
     //PushSDK必须依赖基础组件库，所以需要加入对应依赖
     implementation 'com.umeng.umsdk:common:2.1.0'
     //PushSDK必须依赖utdid库，所以需要加入对应依赖
