--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,9 @@ dependencies:
   #https://pub:dev/packages/image_pickers#-readme-tab-
   image_pickers: ^1.0.7+1
   bordered_text: ^1.0.0
+#  https://pub:dev/packages/flutter_echarts#-installing-tab-
+  flutter_echarts: ^1.3.0
+  number_display: ^2.1.2
 
 
 dev_dependencies:
