--- a/android/build.gradle
+++ b/android/build.gradle
@@ -19,6 +19,12 @@ allprojects {
         jcenter()
         maven { url 'https://dl.bintray.com/umsdk/release' }
     }
+
+    gradle.projectsEvaluated {
+        tasks.withType(JavaCompile) {
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+        }
+    }
 }
 
 rootProject.buildDir = '../build'
