update wallet manager default select

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -107,6 +107,9 @@ dependencies:
   bordered_text: ^1.0.0
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
+  test: any
   flutter_test:
     sdk: flutter
 
