--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -106,6 +106,8 @@ dependencies:
   image_pickers: ^1.0.7+1
   bordered_text: ^1.0.0
   video_player: ^0.10.8+1
+  #  https://pub:dev/packages/flutter_echarts#-installing-tab-
+  flutter_echarts: ^1.3.0
 
 dev_dependencies:
   flutter_driver:
