--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,7 +105,7 @@ dependencies:
   #https://pub:dev/packages/image_pickers#-readme-tab-
   image_pickers: ^1.0.7+1
   bordered_text: ^1.0.0
-  video_player: ^0.10.8+1
+#  video_player: ^0.10.8+1
   #  https://pub:dev/packages/flutter_echarts#-installing-tab-
   flutter_echarts: ^1.3.0
 
