--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -36,8 +36,7 @@
             android:hardwareAccelerated="true"
             android:allowTaskReparenting="true"
             android:launchMode="singleTask"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustResize">
+            android:screenOrientation="portrait">
             <!-- This keeps the window background of the activity showing
                  until Flutter renders its first frame. It can be removed if
                  there is no splash screen (such as the default splash screen
@@ -51,6 +50,24 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
 
+            <!--<intent-filter> &lt;!&ndash;URL Scheme启动&ndash;&gt;
+                &lt;!&ndash;必有项&ndash;&gt;
+                <action android:name="android.intent.action.VIEW" />
+                &lt;!&ndash;如果希望该应用可以通过浏览器的连接启动，则添加该项&ndash;&gt;
+                <category android:name="android.intent.category.BROWSABLE" />
+                &lt;!&ndash;表示该页面可以被隐式调用，必须加上该项&ndash;&gt;
+                <category android:name="android.intent.category.DEFAULT" />
+                &lt;!&ndash;协议部分&ndash;&gt;
+                <data android:scheme="titan"/>
+            </intent-filter>-->
+        </activity>
+
+        <activity
+            android:name="org.hyn.titan.SplashActivity"
+            android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale|layoutDirection|fontScale|screenLayout|density|uiMode"
+            android:hardwareAccelerated="true"
+            android:allowTaskReparenting="true"
+            android:screenOrientation="portrait">
             <intent-filter> <!--URL Scheme启动-->
                 <!--必有项-->
                 <action android:name="android.intent.action.VIEW" />
@@ -59,7 +76,7 @@
                 <!--表示该页面可以被隐式调用，必须加上该项-->
                 <category android:name="android.intent.category.DEFAULT" />
                 <!--协议部分-->
-                <data android:scheme="titan" />
+                <data android:scheme="titan"/>
             </intent-filter>
         </activity>
 
