--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -25,7 +25,7 @@
 			<string>Editor</string>
 			<key>CFBundleURLSchemes</key>
 			<array>
-				<string>titan</string>
+				<string>starrich</string>
 			</array>
 		</dict>
 	</array>
@@ -61,8 +61,6 @@
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Please allow obtain microphone permission</string>
 	<key>NSMotionUsageDescription</key>
-	<string>Please allow obtain motion permission</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Please allow obtain motion permission</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Please allow obtain add photo permission</string>
