--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -77,7 +77,7 @@
                 <!--表示该页面可以被隐式调用，必须加上该项-->
                 <category android:name="android.intent.category.DEFAULT" />
                 <!--协议部分-->
-                <data android:scheme="titan"/>
+                <data android:scheme="StarRich"/>
             </intent-filter>
         </activity>
 
