--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,9 @@ dependencies:
 #  video_player: ^0.10.8+1
   #  https://pub:dev/packages/flutter_echarts#-installing-tab-
   flutter_echarts: ^1.3.0
+  multi_image_picker: ^4.6.6+rc.1
+  flutter_absolute_path: ^1.0.6
+  flutter_native_image: ^0.0.5
 
 dev_dependencies:
   flutter_driver:
