fix google play upload bundle

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,6 +57,10 @@ android {
         ndk {
             abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
+
+        defaultConfig {
+            resConfigs "en", "ko", "CN", "HK"
+        }
     }
 
     signingConfigs {
