--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ android {
         }
 
         defaultConfig {
-            resConfigs "en", "ko", "CN", "HK"
+            resConfigs "zh", "en"
         }
     }
 
