[ios] update ios

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -68,6 +68,8 @@
 	<string>Please allow obtain photo library permission</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Please allow obtain speech recognition permission</string>
+	<key>NSBluetoothPeripheralUsageDescription</key>
+	<string>Please allow obtain bluetooth permission</string>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
