add rpc error translation

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -59,7 +59,7 @@ android {
         }
 
         defaultConfig {
-            resConfigs "zh", "en"
+            resConfigs "zh", "en", "zh-rCN"
         }
     }
 
