--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -96,10 +96,10 @@ dependencies:
   carousel_slider: ^1.3.1
   fake_cookie_manager: ^0.1.0
   loading: ^1.0.1
-#  flutter_inappwebview: ^2.1.0+1
-  flutter_inappwebview:
-    git:
-      url: https://github.com/pichillilorenzo/flutter_inappwebview
+  flutter_inappwebview: ^3.1.0
+#  flutter_inappwebview:
+#    git:
+#      url: https://github.com/pichillilorenzo/flutter_inappwebview
   #https://pub.flutter-io.cn/packages/flutter_bugly
   flutter_bugly: ^0.2.8
   android_intent: ^0.3.4
