--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,25 +97,27 @@ dependencies:
   fake_cookie_manager: ^0.1.0
   loading: ^1.0.1
   flutter_inappwebview: ^3.1.0
-#  flutter_inappwebview:
-#    git:
-#      url: https://github.com/pichillilorenzo/flutter_inappwebview
+  #  flutter_inappwebview:
+  #    git:
+  #      url: https://github.com/pichillilorenzo/flutter_inappwebview
   #https://pub.flutter-io.cn/packages/flutter_bugly
-  flutter_bugly: ^0.2.8
+  flutter_bugly:
+    git:
+      url: git@github.com:moyaying/flutter_bugly.git
   android_intent: ^0.3.4
   app_settings: ^3.0.0
   fluro: ^1.5.1
   #https://pub:dev/packages/image_pickers#-readme-tab-
   image_pickers: ^1.0.7+1
   bordered_text: ^1.0.0
-#  video_player: ^0.10.8+1
+  #  video_player: ^0.10.8+1
   #  https://pub:dev/packages/flutter_echarts#-installing-tab-
   flutter_echarts: ^1.3.0
   multi_image_picker: ^4.6.7
   flutter_absolute_path: ^1.0.6
   flutter_native_image: ^0.0.5
   r_scan: ^0.1.4+1
-#  https://pub:dev/packages/flutter_widget_from_html_core#-installing-tab-:
+  #  https://pub:dev/packages/flutter_widget_from_html_core#-installing-tab-:
   flutter_widget_from_html_core: ^0.3.3
 
 dev_dependencies:
