--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -97,6 +97,8 @@ dependencies:
   fake_cookie_manager: ^0.1.0
   loading: ^1.0.1
   flutter_inappwebview: ^3.1.0
+  characters: ^0.5.0
+
   #  flutter_inappwebview:
   #    git:
   #      url: https://github.com/pichillilorenzo/flutter_inappwebview
