--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -99,6 +99,8 @@ dependencies:
   flutter_inappwebview: ^3.1.0
   characters: ^0.5.0
   custom_radio_grouped_button: ^1.0.0
+  # WebSocket: https://pub.dev/packages/web_socket_channel
+  web_socket_channel: 1.1.0
 
   #  flutter_inappwebview:
   #    git:
@@ -112,7 +114,7 @@ dependencies:
   app_settings: ^3.0.0
   fluro: ^1.5.1
   #https://pub:dev/packages/image_pickers#-readme-tab-
-#  image_pickers: ^1.0.7+2
+  #  image_pickers: ^1.0.7+2
   image_pickers:
     git:
       url: git@github.com:moyaying/image_pickers.git
@@ -120,9 +122,9 @@ dependencies:
   #  video_player: ^0.10.8+1
   #  https://pub:dev/packages/flutter_echarts#-installing-tab-
   flutter_echarts: ^1.3.0
-#  multi_image_picker: ^4.6.7
-#  flutter_absolute_path: ^1.0.6
-#  flutter_native_image: ^0.0.5
+  #  multi_image_picker: ^4.6.7
+  #  flutter_absolute_path: ^1.0.6
+  #  flutter_native_image: ^0.0.5
   r_scan: ^0.1.4+1
   #  https://pub:dev/packages/flutter_widget_from_html_core#-installing-tab-:
   flutter_widget_from_html_core: ^0.3.3
