--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,6 +130,12 @@ dependencies:
   flutter_widget_from_html_core: ^0.3.3
   flutter_picker: ^1.1.5
 
+  #K-Line Chart
+  #https://github.com/lanceqiuz/flutter_k_chart
+  flutter_k_chart:
+    git:
+      url: git@github.com:lanceqiuz/flutter_k_chart.git
+
 dev_dependencies:
   flutter_driver:
     sdk: flutter
