[update] update yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -98,7 +98,8 @@ dependencies:
   fake_cookie_manager: ^0.1.0
   loading: ^1.0.1
   flutter_inappwebview: ^3.1.0
-  characters: ^0.5.0
+#  characters: ^0.5.0
+  characters: ^1.0.0
 
   #  flutter_inappwebview:
   #    git:
