--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,7 +53,7 @@ dependencies:
   #https://pub.dev/packages/shared_preferences#-installing-tab-
   shared_preferences: ^0.5.6
   #https://pub.dev/packages/flutter_bloc
-#  flutter_bloc: ^3.2.0
+  #  flutter_bloc: ^3.2.0
   flutter_bloc: ^4.0.1
   #https://pub.dev/packages/equatable#-readme-tab-
   equatable: ^1.1.1
@@ -106,12 +106,12 @@ dependencies:
   #https://pub.flutter-io.cn/packages/flutter_bugly
   flutter_bugly: ^0.2.8
   #    git:
-#      url: git@github.com:moyaying/flutter_bugly.git
+  #      url: git@github.com:moyaying/flutter_bugly.git
   android_intent: ^0.3.4
   app_settings: ^3.0.0
   fluro: ^1.5.1
   #https://pub:dev/packages/image_pickers#-readme-tab-
-#  image_pickers: ^1.0.7+2
+  #  image_pickers: ^1.0.7+2
   image_pickers:
     git:
       url: git@github.com:moyaying/image_pickers.git
@@ -119,12 +119,19 @@ dependencies:
   #  video_player: ^0.10.8+1
   #  https://pub:dev/packages/flutter_echarts#-installing-tab-
   flutter_echarts: ^1.3.0
-#  multi_image_picker: ^4.6.7
-#  flutter_absolute_path: ^1.0.6
-#  flutter_native_image: ^0.0.5
+  #  multi_image_picker: ^4.6.7
+  #  flutter_absolute_path: ^1.0.6
+  #  flutter_native_image: ^0.0.5
   r_scan: ^0.1.4+1
   #  https://pub:dev/packages/flutter_widget_from_html_core#-installing-tab-:
   flutter_widget_from_html_core: ^0.3.3
+
+  # https://pub.dev/packages/local_auth
+  local_auth: 0.6.2+3
+  # https://pub.dev/packages/flutter_secure_storage
+  flutter_secure_storage: 3.3.3
+  # https://pub.dev/packages/gesture_unlock
+  gesture_unlock: ^0.0.1
 
 dev_dependencies:
   flutter_driver:
