--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,7 @@ dependencies:
   #https://github.com/flutterchina/dio
   dio: ^3.0.7
   #https://pub.dev/packages/package_info
-  package_info: ^0.4.0+4
+  package_info: ^0.4.1
   #https://github.com/baseflowit/flutter-permission-handler
   permission_handler: ^5.0.0+hotfix.3
   #https://pub.dev/packages/event_bus#-installing-tab-
@@ -91,7 +91,7 @@ dependencies:
   web3dart: ^1.2.3
   bip39: ^1.0.3
   intl: ^0.16.0
-  webview_flutter: ^0.3.20+2
+  webview_flutter: ^0.3.22+1
   pull_to_refresh: ^1.5.7
   carousel_slider: ^1.3.1
   fake_cookie_manager: ^0.1.0
