--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,6 +36,8 @@ android {
 
     lintOptions {
         disable 'InvalidPackage'
+        checkReleaseBuilds false
+        abortOnError false
     }
 
     dataBinding {
