--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   #https://pub.dev/packages/logger#-installing-tab-
   logger: ^0.8.3
   #https://pub.dev/packages/flutter_statusbarcolor#-installing-tab-
-  flutter_statusbarcolor: ^0.2.3
+#  flutter_statusbarcolor: ^0.2.3
   #https://github.com/dart-lang/json_serializable
   #  json_annotation: ^2.4.0
   #https://pub.dev/packages/esys_flutter_share
