--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,7 @@ dependencies:
   #https://pub.dev/packages/rxdart
   rxdart: ^0.23.1
   #https://pub.dev/packages/url_launcher
-  url_launcher: 5.1.2
+  url_launcher: 5.5.0
   decimal: ^0.3.5
   #https://pub.dev/packages/carousel_pro
   carousel_pro: ^1.0.0
@@ -145,7 +145,7 @@ dependencies:
   flutter_recaptcha_v2:
     git:
       url: git@github.com:hyperion-hyn/flutter_recaptcha_v2.git
-
+  syncfusion_flutter_sliders: ^18.2.44-beta
 
 dev_dependencies:
   flutter_driver:
