--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -185,6 +185,7 @@ flutter:
   assets:
 
     - res/drawable/
+    - res/kline/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
