--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,5 @@
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jre/jdk/Contents/Home
 #android.enableR8=true
