--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -162,6 +162,7 @@ dependencies:
   web_socket_channel: 1.1.0
   ethereum_address: ^1.0.1
   bitcoin_flutter: ^2.0.1
+  charts_flutter: ^0.9.0
 
 dev_dependencies:
   flutter_driver:
