--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -121,7 +121,7 @@ dependencies:
 #  image_pickers:
 #    git:
 #      url: git@github.com:moyaying/image_pickers.git
-  image_pickers: ^1.0.7+6
+  image_pickers: 1.0.7+6
 
   bordered_text: ^1.0.0
   #  video_player: ^0.10.8+1
