--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -163,6 +163,7 @@ dependencies:
   ethereum_address: ^1.0.1
   bitcoin_flutter: ^2.0.1
   charts_flutter: ^0.9.0
+  device_info: ^0.4.0+1
 
 dev_dependencies:
   flutter_driver:
