--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -164,6 +164,7 @@ dependencies:
   bitcoin_flutter: ^2.0.1
   charts_flutter: ^0.9.0
   device_info: ^0.4.0+1
+  shimmer:  1.1.2
 
 dev_dependencies:
   flutter_driver:
