update debug keystore

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -66,6 +66,12 @@ android {
     }
 
     signingConfigs {
+        debug {
+            keyAlias localProperties['keyAlias']
+            keyPassword localProperties['keyPassword']
+            storeFile file(localProperties['storeFile'])
+            storePassword localProperties['storePassword']
+        }
         release {
             keyAlias localProperties['keyAlias']
             keyPassword localProperties['keyPassword']
