--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -130,7 +130,7 @@ dependencies:
   #  multi_image_picker: ^4.6.7
   #  flutter_absolute_path: ^1.0.6
   #  flutter_native_image: ^0.0.5
-  r_scan: ^0.1.4+1
+  r_scan: 0.1.4+1
   #  https://pub:dev/packages/flutter_widget_from_html_core#-installing-tab-:
   flutter_widget_from_html_core: ^0.3.3
 
