--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -45,7 +45,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.hyn.titan.google"
+        applicationId "org.hyn.titan"
         minSdkVersion 23
         targetSdkVersion 29
         versionCode flutterVersionCode.toInteger()
