--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -116,7 +116,7 @@ dependencies:
   #      url: git@github.com:moyaying/flutter_bugly.git
   android_intent: ^0.3.4
   app_settings: ^3.0.0
-  fluro: 1.6.3
+  fluro: 1.7.8
   #https://pub:dev/packages/image_pickers#-readme-tab-
 #  image_pickers:
 #    git:
@@ -135,7 +135,7 @@ dependencies:
   flutter_widget_from_html_core: ^0.3.3
 
   # https://pub.dev/packages/local_auth
-  local_auth: 0.6.2+3
+  local_auth: ^0.6.3+4
   # https://pub.dev/packages/flutter_secure_storage
   flutter_secure_storage: 3.3.3
   # https://pub.dev/packages/gesture_unlock
