--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -167,6 +167,7 @@ dependencies:
   device_info: ^0.4.0+1
   shimmer:  1.1.2
   glitters: 0.1.3
+  lottie: ^0.7.0+1
 
 dev_dependencies:
   flutter_driver:
