--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -197,9 +197,9 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-
     - res/drawable/
     - res/kline/
+    - res/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
