--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: Titan Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 4.0.23+2023
+version: 4.0.24+2024
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -135,7 +135,7 @@ dependencies:
   flutter_widget_from_html_core: ^0.3.3
 
   # https://pub.dev/packages/local_auth
-  local_auth: ^0.6.3+4
+  local_auth: 0.6.3+4
   # https://pub.dev/packages/flutter_secure_storage
   flutter_secure_storage: 3.3.3
   # https://pub.dev/packages/gesture_unlock
