--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -168,6 +168,8 @@ dependencies:
   shimmer:  1.1.2
   glitters: 0.1.3
   lottie: 0.7.0+1
+  #https://pub:dev/packages/flutter_staggered_grid_view/install:
+  flutter_staggered_grid_view: ^0.3.2
 
 dev_dependencies:
   flutter_driver:
