[rp]: add animate-do

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -118,9 +118,9 @@ dependencies:
   app_settings: ^3.0.0
   fluro: 1.7.8
   #https://pub:dev/packages/image_pickers#-readme-tab-
-#  image_pickers:
-#    git:
-#      url: git@github.com:moyaying/image_pickers.git
+  #  image_pickers:
+  #    git:
+  #      url: git@github.com:moyaying/image_pickers.git
   image_pickers: 1.0.7+6
 
   bordered_text: ^1.0.0
@@ -148,13 +148,13 @@ dependencies:
   vibration: 1.4.0
   #https://pub.dev/packages/oktoast
   oktoast: ^2.3.2
-#  flutter_recaptcha_v2:
-#    git:
-#      url: git@github.com:hyperion-hyn/flutter_recaptcha_v2.git
+  #  flutter_recaptcha_v2:
+  #    git:
+  #      url: git@github.com:hyperion-hyn/flutter_recaptcha_v2.git
 
   #K-Line Chart
   #https://github.com/lanceqiuz/flutter_k_chart
-#  k_chart: ^0.1.1
+  #  k_chart: ^0.1.1
   k_chart:
     git:
       url: git@github.com:hyperion-hyn/k_chart.git
@@ -170,6 +170,7 @@ dependencies:
   lottie: 0.7.0+1
   #https://pub:dev/packages/flutter_staggered_grid_view/install:
   flutter_staggered_grid_view: ^0.3.2
+  animate_do: 1.7.5
 
 dev_dependencies:
   flutter_driver:
