--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,7 +85,7 @@ dependencies:
   #https://pub.dev/packages/floor
   floor: ^0.8.0
   #https://pub.dev/packages/rxdart
-  rxdart: ^0.23.1
+  rxdart: ^0.24.1
   #https://pub.dev/packages/url_launcher
   url_launcher: 5.5.0
   decimal: ^0.3.5
@@ -171,6 +171,7 @@ dependencies:
   #https://pub:dev/packages/flutter_staggered_grid_view/install:
   flutter_staggered_grid_view: ^0.3.2
   animate_do: 1.7.5
+  assets_audio_player: ^2.0.13+1
 
 dev_dependencies:
   flutter_driver:
@@ -203,6 +204,7 @@ flutter:
     - res/drawable/
     - res/kline/
     - res/lottie/
+    - res/voice/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
