--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,7 +126,7 @@ dependencies:
   bordered_text: ^1.0.0
   #  video_player: ^0.10.8+1
   #  https://pub:dev/packages/flutter_echarts#-installing-tab-
-  flutter_echarts: ^1.3.5
+  flutter_echarts: 1.5.0
   #  multi_image_picker: ^4.6.7
   #  flutter_absolute_path: ^1.0.6
   #  flutter_native_image: ^0.0.5
