--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -172,6 +172,8 @@ dependencies:
   flutter_staggered_grid_view: ^0.3.2
   animate_do: 1.7.5
   assets_audio_player: ^2.0.13+1
+  fl_chart: ^0.12.1
+  pie_chart: ^4.0.1
 
 dev_dependencies:
   flutter_driver:
