--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -173,6 +173,7 @@ dependencies:
   animate_do: 1.7.5
   assets_audio_player: ^2.0.13+1
   pie_chart: ^4.0.1
+  flushbar: ^1.10.4
 
 dev_dependencies:
   flutter_driver:
