--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -174,6 +174,7 @@ dependencies:
   assets_audio_player: ^2.0.13+1
   pie_chart: ^4.0.1
   flushbar: ^1.10.4
+  pinput: ^0.2.0
 
 dev_dependencies:
   flutter_driver:
